--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Mi Página Minimalista</title>
 </head>
 <body>
+    <img src="logov3.jpg" alt="Mi Logo" width="200">
+
     <h1>¡Hola, mundo!</h1>
     <p>Mi sitio web en GitHub Pages está funcionando.</p>
 </body>
