--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <title>Mi Página Minimalista</title>
 </head>
 <body>
-    <img src="logov3.jpg" alt="Mi Logo" width="300">
-
-    <h1>¡Hola, mundo!</h1>
-    <p>Mi sitio web en GitHub Pages está funcionando.</p>
+    <img src="logov3.jpg" alt="Mi Logo" style="padding-top: 300px; padding-left: 500px;" width="300">
 </body>
 </html>
