--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Minimalista</title>
+    <title>GastroSAT</title>
 </head>
 <body>
-    <img src="logov3.jpg" alt="Mi Logo" style="padding-top: 300px; padding-left: 500px;" width="300">
+    <img src="logov3.jpg" alt="Mi Logo" style="padding-top: 200px; padding-left: 400px;" width="300">
 </body>
 </html>
