--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>GastroSAT</title>
 </head>
 <body>
-    <img src="logov3.jpg" alt="Mi Logo" style="padding-top: 200px; padding-left: 400px;" width="300">
+    <div style="display: flex; align-items: start; padding-top: 200px; padding-left: 400px;">
+        <!-- Logo -->
+        <img src="logov3.jpg" alt="Mi Logo" width="300">
+
+        <!-- Caja de contenido -->
+        <div style="width: 500px; height: 800px; border: 1px solid black; margin-left: 50px; padding: 20px;">
+            <h2>Bienvenido a GastroSAT</h2>
+            <p>Este es un espacio donde podrás encontrar información sobre nuestro servicio.</p>
+        </div>
+    </div>
 </body>
 </html>
