--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
         <!-- Logo -->
         <img src="logov3.jpg" alt="Mi Logo" width="300">
 
-        <!-- Caja de contenido -->
-        <div style="width: 500px; height: 800px; border: 1px solid black; margin-left: 50px; padding: 20px;">
+        <!-- Caja de contenido sin borde -->
+        <div style="width: 500px; height: 800px; margin-left: 50px; padding: 20px;">
             <h2>Bienvenido a GastroSAT</h2>
             <p>Este es un espacio donde podrás encontrar información sobre nuestro servicio.</p>
+
+            <h3>Descarga nuestros catálogos:</h3>
+            <ul>
+                <li><a href="catalogo1.pdf" download>Descargar Catálogo 1</a></li>
+                <li><a href="catalogo2.pdf" download>Descargar Catálogo 2</a></li>
+            </ul>
         </div>
     </div>
 </body>
