--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 
             <h3>Descarga nuestros catálogos:</h3>
             <ul>
-                <li><a href="catalogo1.pdf" download>Descargar Catálogo 1</a></li>
-                <li><a href="catalogo2.pdf" download>Descargar Catálogo 2</a></li>
+                <li>
+                    <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?rlkey=yo8yelhafefxjrv0tbzqsrw9b&st=w2t61pr4&dl=1" target="_blank">
+                        Descargar Catálogo FRICOSMOS 2023-24
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
