--- a/index.html
+++ b/index.html
@@ -19,11 +19,22 @@
             <ul>
                 <li>
                     <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?rlkey=yo8yelhafefxjrv0tbzqsrw9b&st=w2t61pr4&dl=1" target="_blank">
-                        Descargar Catálogo FRICOSMOS 2023-24
+                        📂 Descargar Catálogo FRICOSMOS 2023-24
                     </a>
                 </li>
             </ul>
+
+            <h3>Preguntas frecuentes</h3>
+            <ul>
+                <li>❓ <strong>Pregunta 1:</strong> (Aquí puedes poner la respuesta)</li>
+                <li>❓ <strong>Pregunta 2:</strong> (Aquí puedes poner la respuesta)</li>
+            </ul>
+
+            <h3>📞 ¿Nos ponemos en contacto?</h3>
+            <p>Puedes llamarnos o enviar un <strong>WhatsApp</strong> al <a href="tel:+34620528074">+34 620 528 074</a></p>
+            <p>O envíanos un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a></p>
         </div>
     </div>
 </body>
 </html>
+
