--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>GastroSAT</title>
 </head>
 <body>
-    <div style="display: flex; align-items: start; padding-top: 200px; padding-left: 400px;">
+    <div style="display: flex; align-items: start; padding-top: 200px; padding-left: 300px;">
         <!-- Logo -->
         <img src="logov3.jpg" alt="Mi Logo" width="300">
 
         <!-- Caja de contenido sin borde -->
-        <div style="width: 500px; height: 800px; margin-left: 50px; padding: 20px;">
+        <div style="width: 650px; height: 800px; margin-left: 50px; padding: 20px;">
             <h2>Bienvenido a GastroSAT</h2>
             <p>Este es un espacio donde podrás encontrar información sobre nuestro servicio.</p>
 
@@ -19,7 +19,7 @@
             <ul>
                 <li>
                     <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?rlkey=yo8yelhafefxjrv0tbzqsrw9b&st=w2t61pr4&dl=1" target="_blank">
-                        📂 Descargar Catálogo FRICOSMOS 2023-24
+                        📄 Descargar Catálogo FRICOSMOS 2023-24
                     </a>
                 </li>
             </ul>
@@ -37,4 +37,3 @@
     </div>
 </body>
 </html>
-
