--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 
             <h3>Preguntas frecuentes</h3>
             <ul>
-                <li>❓ <strong>Pregunta 1:</strong> (Aquí puedes poner la respuesta)</li>
-                <li>❓ <strong>Pregunta 2:</strong> (Aquí puedes poner la respuesta)</li>
+                <li>❓ <strong>Haceis descuento en las maquinas?</strong> Si, hacemos descuentos enormes pero solo si nos caes bien.</li>
+                <li>❓ <strong>Podeis reparar mi vitrina de 1976?</strong> Por supuesto!, no es nuestro fuerte pero reparamos todo tipo de piezas de museo</li>
+                <li>❓ <strong>Podeis venir rapido?</strong> No!, tenemos que respetar las normas de trafico por que no ganamos para multas. Llegar en 24 horas es lo mejor que podemos hacer.</li>
             </ul>
 
             <h3>📞 ¿Nos ponemos en contacto?</h3>
