--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Caja de contenido sin borde -->
         <div style="width: 650px; height: 800px; margin-left: 50px; padding: 20px;">
             <h2>Bienvenido a GastroSAT</h2>
-            <p>Este es un espacio donde podrás encontrar información sobre nuestro servicio.</p>
+            <p>Cuando no podemos reparar una maquina te vendemos una nueva, por eso nuestras cifras de ventas son tan bajas.</p>
 
             <h3>Descarga nuestros catálogos:</h3>
             <ul>
@@ -24,11 +24,13 @@
                 </li>
             </ul>
 
-            <h3>Preguntas frecuentes</h3>
+            <h3>❓Preguntas frecuentes</h3>
             <ul>
-                <li>❓ <strong>Haceis descuento en las maquinas?</strong> Si, hacemos descuentos enormes pero solo si nos caes bien.</li>
-                <li>❓ <strong>Podeis reparar mi vitrina de 1976?</strong> Por supuesto!, no es nuestro fuerte pero reparamos todo tipo de piezas de museo</li>
-                <li>❓ <strong>Podeis venir rapido?</strong> No!, tenemos que respetar las normas de trafico por que no ganamos para multas. Llegar en 24 horas es lo mejor que podemos hacer.</li>
+                <li><strong>Las maquinas son buenas?</strong> Tienen sus dias, como todos, pero si se las trata bien no suelen poner pegas.</li>
+                <li><strong>Haceis descuento en las maquinas?</strong> Si, hacemos descuentos enormes pero solo si nos caes bien.</li>
+                <li><strong>Podeis reparar mi vitrina de 1976?</strong> Por supuesto!, no es nuestro fuerte pero reparamos todo tipo de piezas de museo cuando nos lo piden.</li>
+                <li><strong>Podeis venir rapido?</strong> No!, tenemos que respetar las normas de trafico por que no ganamos para multas. Llegar en 24 horas es lo mejor que podemos hacer.</li>
+                
             </ul>
 
             <h3>📞 ¿Nos ponemos en contacto?</h3>
