--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2>Bienvenido a GastroSAT</h2>
             <p>Cuando no podemos reparar una maquina te vendemos una nueva, por eso nuestras cifras de ventas son tan bajas.</p>
 
-            <h3>Descarga nuestros catálogos:</h3>
+            <h3>📁 Descarga nuestros catálogos:</h3>
             <ul>
                 <li>
                     <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?rlkey=yo8yelhafefxjrv0tbzqsrw9b&st=w2t61pr4&dl=1" target="_blank">
