--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <!-- Caja de contenido sin borde -->
         <div style="width: 650px; height: 800px; margin-left: 50px; padding: 20px;">
-            <h2>Bienvenido a GastroSAT</h2>
+            <h2>🚀 Bienvenido/a a GastroSAT</h2>
             <p>Cuando no podemos reparar una maquina te vendemos una nueva, por eso nuestras cifras de ventas son tan bajas.</p>
 
             <h3>📁 Descarga nuestros catálogos:</h3>
@@ -29,6 +29,7 @@
                 <li><strong>Las maquinas son buenas?</strong> Tienen sus dias, como todos, pero si se las trata bien no suelen poner pegas.</li>
                 <li><strong>Haceis descuento en las maquinas?</strong> Si, hacemos descuentos enormes pero solo si nos caes bien.</li>
                 <li><strong>Podeis reparar mi vitrina de 1976?</strong> Por supuesto!, no es nuestro fuerte pero reparamos todo tipo de piezas de museo cuando nos lo piden.</li>
+                <li><strong>Sera muy caro?</strong> Depende comparado con que, pero a priori es mas varato que el aceite de oliva. Cuando suponemos que el coste sera mayor nos toca trabajar y hacer un presupuesto.</li>
                 <li><strong>Podeis venir rapido?</strong> No!, tenemos que respetar las normas de trafico por que no ganamos para multas. Llegar en 24 horas es lo mejor que podemos hacer.</li>
                 
             </ul>
