--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Caja de contenido sin borde -->
         <div style="width: 650px; height: 800px; margin-left: 50px; padding: 20px;">
             <h2>🚀 Bienvenido/a a GastroSAT</h2>
-            <p>Cuando no podemos reparar una maquina te vendemos una nueva, por eso nuestras cifras de ventas son tan bajas.</p>
+            <p>Cuando no podemos reparar una máquina te vendemos una nueva, por eso nuestras cifras de ventas son tan bajas.</p>
 
             <h3>📁 Descarga nuestros catálogos:</h3>
             <ul>
@@ -24,14 +24,13 @@
                 </li>
             </ul>
 
-            <h3>❓Preguntas frecuentes</h3>
+            <h3>❓ Preguntas frecuentes</h3>
             <ul>
-                <li><strong>Las maquinas son buenas?</strong> Tienen sus dias, como todos, pero si se las trata bien no suelen poner pegas.</li>
-                <li><strong>Haceis descuento en las maquinas?</strong> Si, hacemos descuentos enormes pero solo si nos caes bien.</li>
-                <li><strong>Podeis reparar mi vitrina de 1976?</strong> Por supuesto!, no es nuestro fuerte pero reparamos todo tipo de piezas de museo cuando nos lo piden.</li>
-                <li><strong>Sera muy caro?</strong> Depende comparado con que, pero a priori es mas varato que el aceite de oliva. Cuando suponemos que el coste sera mayor nos toca trabajar y hacer un presupuesto.</li>
-                <li><strong>Podeis venir rapido?</strong> No!, tenemos que respetar las normas de trafico por que no ganamos para multas. Llegar en 24 horas es lo mejor que podemos hacer.</li>
-                
+                <li><strong>¿Las máquinas son buenas?</strong> Tienen sus días, como todos, pero si se las trata bien no suelen poner pegas.</li>
+                <li><strong>¿Hacéis descuento en las máquinas?</strong> Sí, hacemos descuentos enormes pero solo si nos caes bien.</li>
+                <li><strong>¿Podéis reparar mi vitrina de 1976?</strong> ¡Por supuesto! No es nuestro fuerte, pero reparamos todo tipo de piezas de museo cuando nos lo piden.</li>
+                <li><strong>¿Será muy caro?</strong> Depende comparado con qué, pero a priori es más barato que el aceite de oliva. Cuando suponemos que el coste será mayor, nos toca trabajar y hacer un presupuesto.</li>
+                <li><strong>¿Podéis venir rápido?</strong> ¡No! Tenemos que respetar las normas de tráfico porque no ganamos para multas. Llegar en 24 horas es lo mejor que podemos hacer.</li>
             </ul>
 
             <h3>📞 ¿Nos ponemos en contacto?</h3>
@@ -39,5 +38,10 @@
             <p>O envíanos un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a></p>
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer style="text-align: center; padding: 20px; margin-top: 50px;">
+        ©2025 GastroSAT
+    </footer>
 </body>
 </html>
