--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <title>GastroSAT</title>
 </head>
 <body>
-    <div style="display: flex; align-items: start; padding-top: 200px; padding-left: 300px;">
+    <div style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; padding: 20px;">
         <!-- Logo -->
-        <img src="logov3.jpg" alt="Mi Logo" width="300">
+        <img src="logov3.jpg" alt="Mi Logo" style="width: 100%; max-width: 300px; height: auto;">
 
         <!-- Caja de contenido sin borde -->
-        <div style="width: 650px; height: 800px; margin-left: 50px; padding: 20px;">
+        <div style="width: 100%; max-width: 650px; padding: 20px; text-align: center;">
             <h2>🚀 Bienvenido/a a GastroSAT</h2>
             <p>Cuando no podemos reparar una máquina te vendemos una nueva, por eso nuestras cifras de ventas son tan bajas.</p>
 
             <h3>📁 Descarga nuestros catálogos:</h3>
-            <ul>
+            <ul style="list-style: none; padding: 0;">
                 <li>
                     <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?rlkey=yo8yelhafefxjrv0tbzqsrw9b&st=w2t61pr4&dl=1" target="_blank">
                         📄 Descargar Catálogo FRICOSMOS 2023-24
@@ -25,7 +25,7 @@
             </ul>
 
             <h3>❓ Preguntas frecuentes</h3>
-            <ul>
+            <ul style="text-align: left;">
                 <li><strong>¿Las máquinas son buenas?</strong> Tienen sus días, como todos, pero si se las trata bien no suelen poner pegas.</li>
                 <li><strong>¿Hacéis descuento en las máquinas?</strong> Sí, hacemos descuentos enormes pero solo si nos caes bien.</li>
                 <li><strong>¿Podéis reparar mi vitrina de 1976?</strong> ¡Por supuesto! No es nuestro fuerte, pero reparamos todo tipo de piezas de museo cuando nos lo piden.</li>
@@ -40,7 +40,7 @@
     </div>
 
     <!-- Footer -->
-    <footer style="text-align: center; padding: 20px; margin-top: 50px;">
+    <footer style="text-align: center; padding: 20px; margin-top: 20px;">
         ©2025 GastroSAT
     </footer>
 </body>
