--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
             <ul style="list-style: none; padding: 0;">
                 <li>
                     <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?rlkey=yo8yelhafefxjrv0tbzqsrw9b&st=w2t61pr4&dl=1" target="_blank">
-                        📄 Descargar Catálogo FRICOSMOS 2023-24
+                        📄 Catálogo FRICOSMOS
+                    </a>
+                </li>
+                 <li>
+                    <a href="https://www.dropbox.com/scl/fi/c8cs41gs00pn1z90e3tf5/Tecnoinox_Catalogo.pdf?rlkey=9xzodewwbvzrrrijmlw18vyta&st=3k2zqcps&dl=0" target="_blank">
+                        📄 Catálogo TECNOINOX
                     </a>
                 </li>
             </ul>
