--- a/index.html
+++ b/index.html
@@ -35,13 +35,4 @@
 
             <h3>📞 ¿Nos ponemos en contacto?</h3>
             <p>Puedes llamarnos o enviar un <strong>WhatsApp</strong> al <a href="tel:+34620528074">+34 620 528 074</a></p>
-            <p>O envíanos un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a></p>
-        </div>
-    </div>
-
-    <!-- Footer -->
-    <footer style="text-align: center; padding: 20px; margin-top: 20px;">
-        ©2025 GastroSAT
-    </footer>
-</body>
-</html>
+            <p>O envíanos un correo a <a href="mailto:info@gastrosat.com">
