--- a/index.html
+++ b/index.html
@@ -35,4 +35,14 @@
 
             <h3>📞 ¿Nos ponemos en contacto?</h3>
             <p>Puedes llamarnos o enviar un <strong>WhatsApp</strong> al <a href="tel:+34620528074">+34 620 528 074</a></p>
-            <p>O envíanos un correo a <a href="mailto:info@gastrosat.com">
+            <p>O envíanos un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a></p>
+        </div>
+    </div>
+
+    <!-- Footer mejorado -->
+    <footer style="text-align: center; padding: 20px; margin-top: 40px; background-color: #f8f8f8; font-size: 14px; color: #333;">
+        <p>©2025 GastroSAT. Todos los derechos reservados.</p>
+        <p>Desarrollado por <strong>GastroSAT</strong></p>
+    </footer>
+</body>
+</html>
