--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>GastroSAT</title>
 </head>
 <body>
-    <div style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; padding: 20px; margin-left: -100px;">
+    <div style="display: flex; flex-wrap: wrap; align-items: flex-start; justify-content: center; padding: 20px; max-width: 90%; margin: auto;">
         <!-- Logo -->
         <img src="logov3.jpg" alt="Mi Logo" style="width: 100%; max-width: 300px; height: auto;">
 
         <!-- Caja de contenido sin borde -->
-        <div style="width: 100%; max-width: 650px; padding: 20px; text-align: center;">
+        <div style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
             <h2>🚀 Bienvenido/a a GastroSAT</h2>
             <p>Cuando no podemos reparar una máquina te vendemos una nueva, por eso nuestras cifras de ventas son tan bajas.</p>
 
@@ -25,7 +25,7 @@
             </ul>
 
             <h3>❓ Preguntas frecuentes</h3>
-            <ul style="text-align: left;">
+            <ul>
                 <li><strong>¿Las máquinas son buenas?</strong> Tienen sus días, como todos, pero si se las trata bien no suelen poner pegas.</li>
                 <li><strong>¿Hacéis descuento en las máquinas?</strong> Sí, hacemos descuentos enormes pero solo si nos caes bien.</li>
                 <li><strong>¿Podéis reparar mi vitrina de 1976?</strong> ¡Por supuesto! No es nuestro fuerte, pero reparamos todo tipo de piezas de museo cuando nos lo piden.</li>
