--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
         <!-- Caja de contenido sin borde -->
         <div style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
             <h2>🚀 Bienvenido/a a GastroSAT</h2>
+            <p>Servicio de asistencia técnica & equipamiento para hoteles, bares, y restaurantes de Mallorca.</p>
             <p>Cuando no podemos reparar una máquina te vendemos una nueva, por eso nuestras cifras de ventas son tan bajas.</p>
 
             <h3>📁 Descarga nuestros catálogos:</h3>
             <ul style="list-style: none; padding: 0;">
                 <li>📄 
                     <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?rlkey=yo8yelhafefxjrv0tbzqsrw9b&st=w2t61pr4&dl=1" target="_blank">
-                        Descargar Catálogo FRICOSMOS
+                        Catálogo FRICOSMOS.pdf
                     </a>
                 </li>
             </ul>
             <ul style="list-style: none; padding: 0;">
                 <li>📄 
                     <a href="https://www.dropbox.com/scl/fi/c8cs41gs00pn1z90e3tf5/Tecnoinox_Catalogo.pdf?rlkey=9xzodewwbvzrrrijmlw18vyta&st=3k2zqcps&dl=0" target="_blank">
-                        Descargar Catálogo TECNOINOX
+                        Catálogo TECNOINOX.pdf
                     </a>
                 </li>
             </ul>
