--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         <!-- Caja de contenido sin borde -->
         <div style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
             <h2>🚀 Bienvenido/a a GastroSAT</h2>
-            <p>Servicio de asistencia técnica & equipamiento para hoteles, bares, y restaurantes de Mallorca.</p>
+            <p><strong>Servicio de asistencia técnica & equipamiento para hoteles, bares y restaurantes de Mallorca.</strong></p>
+
             <p>Cuando no podemos reparar una máquina te vendemos una nueva, por eso nuestras cifras de ventas son tan bajas.</p>
+
+            <hr>
 
             <h3>📁 Descarga nuestros catálogos:</h3>
             <ul style="list-style: none; padding: 0;">
@@ -23,14 +26,19 @@
                         Catálogo FRICOSMOS.pdf
                     </a>
                 </li>
-            </ul>
-            <ul style="list-style: none; padding: 0;">
                 <li>📄 
                     <a href="https://www.dropbox.com/scl/fi/c8cs41gs00pn1z90e3tf5/Tecnoinox_Catalogo.pdf?rlkey=9xzodewwbvzrrrijmlw18vyta&st=3k2zqcps&dl=0" target="_blank">
                         Catálogo TECNOINOX.pdf
                     </a>
                 </li>
+                <li>📄 <a href="#">Catálogo pendiente</a></li>
+                <li>📄 <a href="#">Catálogo pendiente</a></li>
+                <li>📄 <a href="#">Catálogo pendiente</a></li>
+                <li>📄 <a href="#">Catálogo pendiente</a></li>
+                <li>📄 <a href="#">Catálogo pendiente</a></li>
             </ul>
+
+            <hr>
 
             <h3>❓ Preguntas frecuentes</h3>
             <ul style="list-style: none; padding: 0;">
@@ -40,6 +48,8 @@
                 <li>✅ <strong>¿Será muy caro?</strong> Depende comparado con qué, pero a priori es más barato que el aceite de oliva. Cuando suponemos que el coste será mayor, nos toca trabajar y hacer un presupuesto.</li>
                 <li>✅ <strong>¿Podéis venir rápido?</strong> ¡No! Tenemos que respetar las normas de tráfico porque no ganamos para multas. Llegar en 24 horas es lo mejor que podemos hacer.</li>
             </ul>
+
+            <hr>
 
             <h3>📞 ¿Nos ponemos en contacto?</h3>
             <p>Puedes llamarnos o enviar un <strong>WhatsApp</strong> al <a href="tel:+34620528074">+34 620 528 074</a></p>
