--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <h3>❓ Preguntas frecuentes</h3>
             <ul style="list-style: none; padding: 0;">
-                <li>✅ <strong>¿Las máquinas son buenas?</strong> Tienen sus días, como todos, pero si se las trata bien suelen hacer su trabajo.</li>
+                <li>✅ <strong>¿Las máquinas son buenas?</strong> Tienen sus días, como todos, pero si se las trata bien no suelen poner pegas.</li>
                 <li>✅ <strong>¿Hacéis descuento en las máquinas?</strong> Sí, hacemos descuentos enormes pero solo si nos caes bien.</li>
                 <li>✅ <strong>¿Podéis reparar mi vitrina de 1976?</strong> ¡Por supuesto! No es nuestro fuerte, pero reparamos todo tipo de piezas de museo cuando nos lo piden.</li>
                 <li>✅ <strong>¿Será muy caro?</strong> Depende comparado con qué, pero a priori es más barato que el aceite de oliva. Cuando suponemos que el coste será mayor, nos toca trabajar y hacer un presupuesto.</li>
