--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
                 <li>✅ <strong>¿Podéis reparar mi vitrina de 1976?</strong> ¡Por supuesto! No es nuestro fuerte, pero reparamos todo tipo de piezas de museo cuando nos lo piden.</li>
                 <li>✅ <strong>¿Podéis venir rápido?</strong> ¡No! Tenemos que respetar las normas de tráfico porque no ganamos para multas. Llegar en 24 horas es lo mejor que podemos hacer.</li>
                 <li>✅ <strong>¿Será muy caro?</strong> Depende comparado con qué, pero a priori es más barato que el aceite de oliva. Cuando suponemos que el coste será mayor, nos toca trabajar y hacer un presupuesto.</li>
-
             </ul>
 
             <hr>
@@ -58,8 +57,14 @@
         </div>
     </div>
 
-    <!-- Footer mejorado -->
+    <!-- Footer con imágenes de logos -->
     <footer style="text-align: center; padding: 20px; margin-top: 40px; background-color: #f8f8f8; font-size: 14px; color: #333;">
+        <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 10px;">
+            <img src="logo1.png" alt="Logo 1" style="height: 50px;">
+            <img src="logo2.png" alt="Logo 2" style="height: 50px;">
+            <img src="logo3.png" alt="Logo 3" style="height: 50px;">
+            <img src="logo4.png" alt="Logo 4" style="height: 50px;">
+        </div>
         <p>©2025 GastroSAT. Todos los derechos reservados.</p>
         <p>Desarrollado por <strong>GastroSAT</strong></p>
     </footer>
