--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <footer style="text-align: center; padding: 20px; margin-top: 40px; background-color: #f8f8f8; font-size: 14px; color: #333;">
         <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 10px;">
             <img src="infrico (1).png" alt="Logo 1" style="height: 50px;">
-            <img src="logo2.png" alt="Logo 2" style="height: 50px;">
+            <img src="fricosmos (1).png" alt="Logo 2" style="height: 50px;">
             <img src="logo3.png" alt="Logo 3" style="height: 50px;">
             <img src="logo4.png" alt="Logo 4" style="height: 50px;">
         </div>
