--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 10px;">
             <img src="infrico (1).png" alt="Logo 1" style="height: 50px;">
             <img src="fricosmos (1).png" alt="Logo 2" style="height: 50px;">
-            <img src="logo3.png" alt="Logo 3" style="height: 50px;">
+            <img src="logo-tecnoinox-vet-grey-1-e1634888412589.png" alt="Logo 3" style="height: 50px;">
             <img src="logo4.png" alt="Logo 4" style="height: 50px;">
         </div>
         <p>©2025 GastroSAT. Todos los derechos reservados.</p>
