--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <img src="infrico (1).png" alt="Logo 1" style="height: 50px;">
             <img src="fricosmos (1).png" alt="Logo 2" style="height: 50px;">
             <img src="logo-tecnoinox-vet-grey-1-e1634888412589.png" alt="Logo 3" style="height: 50px;">
-            <img src="logo4.png" alt="Logo 4" style="height: 50px;">
+            <img src="logo_impafri-1400x330 (1) (1) (1).png" alt="Logo 4" style="height: 50px;">
         </div>
         <p>©2025 GastroSAT. Todos los derechos reservados.</p>
         <p>Desarrollado por <strong>GastroSAT</strong></p>
