--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
     <!-- Footer con imágenes de logos -->
     <footer style="text-align: center; padding: 20px; margin-top: 40px; background-color: #f8f8f8; font-size: 14px; color: #333;">
         <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 10px;">
-            <img src="infrico (1).png" alt="Logo 1" style="height: 50px;">
-            <img src="fricosmos (1).png" alt="Logo 2" style="height: 50px;">
-            <img src="logo-tecnoinox-vet-grey-1-e1634888412589.png" alt="Logo 3" style="height: 50px;">
-            <img src="logo_impafri-1400x330 (1) (1) (1).png" alt="Logo 4" style="height: 50px;">
+            <img src="infrico.png" alt="Logo 1" style="height: 50px;">
+            <img src="fricosmos.png" alt="Logo 2" style="height: 50px;">
+            <img src="tecnoinox.png" alt="Logo 3" style="height: 50px;">
+            <img src="impafri.png" alt="Logo 4" style="height: 50px;">
+            <img src="intarcon.png" alt="Logo 4" style="height: 50px;">
+
         </div>
         <p>©2025 GastroSAT. Todos los derechos reservados.</p>
         <p>Desarrollado por <strong>GastroSAT</strong></p>
