--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
             <img src="infrico.png" alt="Logo 1" style="height: 50px;">
             <img src="fricosmos.png" alt="Logo 2" style="height: 50px;">
             <img src="tecnoinox.png" alt="Logo 3" style="height: 50px;">
-            <img src="impafri.png" alt="Logo 4" style="height: 50px;">
-            <img src="intarcon.png" alt="Logo 5" style="height: 50px;">
-
+            <img src="impafri.png" alt="Logo 4" style="height: 37.5px;"> <!-- Reducido 25% -->
+            <img src="intarcon.png" alt="Logo 5" style="height: 37.5px;"> <!-- Reducido 25% -->
         </div>
         <p>©2025 GastroSAT. Todos los derechos reservados.</p>
         <p>Desarrollado por <strong>GastroSAT</strong></p>
