--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <li>✅ <strong>¿Las máquinas son buenas?</strong> Tienen sus días, como todos, pero si se las trata bien no suelen poner pegas.</li>
                 <li>✅ <strong>¿Hacéis descuento en las máquinas?</strong> Sí, hacemos descuentos enormes pero solo si nos caes bien.</li>
                 <li>✅ <strong>¿Podéis reparar mi vitrina de 1976?</strong> ¡Por supuesto! No es nuestro fuerte, pero reparamos todo tipo de piezas de museo cuando nos lo piden.</li>
-                <li>✅ <strong>¿Podéis venir rápido?</strong> ¡No! Tenemos que respetar las normas de tráfico porque no ganamos para multas. Llegar en menos de 24 horas es lo mejor que podemos hacer.</li>
+                <li>✅ <strong>¿Podéis venir rápido?</strong> ¡No! Tenemos que respetar las normas de tráfico porque no ganamos para multas. Llegar en 24 horas es lo mejor que podemos hacer.</li>
                 <li>✅ <strong>¿Será muy caro?</strong> Depende comparado con qué, pero a priori es más barato que el aceite de oliva. Cuando suponemos que el coste será mayor, nos toca trabajar y hacer un presupuesto.</li>
             </ul>
 
@@ -57,14 +57,14 @@
         </div>
     </div>
 
-    <!-- Footer con imágenes de logos -->
+    <!-- Footer con imágenes de logos con opacidad reducida -->
     <footer style="text-align: center; padding: 20px; margin-top: 40px; background-color: #f8f8f8; font-size: 14px; color: #333;">
         <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 10px;">
-            <img src="infrico.png" alt="Logo 1" style="height: 50px;">
-            <img src="fricosmos.png" alt="Logo 2" style="height: 50px;">
-            <img src="tecnoinox.png" alt="Logo 3" style="height: 50px;">
-            <img src="impafri.png" alt="Logo 4" style="height: 37.5px;"> <!-- Reducido 25% -->
-            <img src="intarcon.png" alt="Logo 5" style="height: 37.5px;"> <!-- Reducido 25% -->
+            <img src="infrico.png" alt="Logo 1" style="height: 50px; opacity: 0.5;">
+            <img src="fricosmos.png" alt="Logo 2" style="height: 50px; opacity: 0.5;">
+            <img src="tecnoinox.png" alt="Logo 3" style="height: 50px; opacity: 0.5;">
+            <img src="impafri.png" alt="Logo 4" style="height: 37.5px; opacity: 0.5;"> <!-- Reducido 25% -->
+            <img src="intarcon.png" alt="Logo 5" style="height: 37.5px; opacity: 0.5;"> <!-- Reducido 25% -->
         </div>
         <p>©2025 GastroSAT. Todos los derechos reservados.</p>
         <p>Desarrollado por <strong>GastroSAT</strong></p>
