--- a/index.html
+++ b/index.html
@@ -5,32 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GastroSAT</title>
 </head>
-<body>
-    <div style="display: flex; flex-wrap: wrap; align-items: flex-start; justify-content: center; padding: 20px; max-width: 90%; margin: auto; margin-left: -100px;">
+<body style="margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; text-align: center;">
+
+    <div style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; padding: 20px; max-width: 90%; margin: auto;">
         <!-- Logo -->
-        <img src="logov3.jpg" alt="Mi Logo" style="width: 100%; max-width: 300px; height: auto;">
+        <img src="logov3.jpg" alt="GastroSAT Logo" style="width: 100%; max-width: 300px; height: auto;">
 
         <!-- Caja de contenido sin borde -->
         <div style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
             <h2>🚀 Bienvenido/a a GastroSAT</h2>
-            <p><strong>Servicio de asistencia técnica & equipamiento para hoteles, bares y restaurantes de Mallorca.</strong></p>
+            <p><strong>🛠️ Servicio de asistencia técnica & equipamiento para hoteles, bares y restaurantes de Mallorca.</strong></p>
 
-            <p>Cuando no podemos reparar una máquina te vendemos una nueva, por eso nuestras cifras de ventas son tan bajas.</p>
+            <p>🔧 Cuando no podemos reparar una máquina, te vendemos una nueva. Por eso nuestras cifras de ventas son tan bajas.</p>
 
             <hr>
 
-            <h3>📁 Descarga nuestros catálogos:</h3>
+            <h3>📂 Descarga nuestros catálogos</h3>
             <ul style="list-style: none; padding: 0;">
-                <li>📄 
-                    <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?rlkey=yo8yelhafefxjrv0tbzqsrw9b&st=w2t61pr4&dl=1" target="_blank">
-                        Catálogo FRICOSMOS.pdf
-                    </a>
-                </li>
-                <li>📄 
-                    <a href="https://www.dropbox.com/scl/fi/c8cs41gs00pn1z90e3tf5/Tecnoinox_Catalogo.pdf?rlkey=9xzodewwbvzrrrijmlw18vyta&st=3k2zqcps&dl=0" target="_blank">
-                        Catálogo TECNOINOX.pdf
-                    </a>
-                </li>
+                <li>📄 <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?rlkey=yo8yelhafefxjrv0tbzqsrw9b&st=w2t61pr4&dl=1" target="_blank">Catálogo FRICOSMOS.pdf</a></li>
+                <li>📄 <a href="https://www.dropbox.com/scl/fi/c8cs41gs00pn1z90e3tf5/Tecnoinox_Catalogo.pdf?rlkey=9xzodewwbvzrrrijmlw18vyta&st=3k2zqcps&dl=0" target="_blank">Catálogo TECNOINOX.pdf</a></li>
                 <li>📄 <a href="#">Catálogo pendiente</a></li>
                 <li>📄 <a href="#">Catálogo pendiente</a></li>
                 <li>📄 <a href="#">Catálogo pendiente</a></li>
@@ -42,32 +35,33 @@
 
             <h3>❓ Preguntas frecuentes</h3>
             <ul style="list-style: none; padding: 0;">
-                <li>✅ <strong>¿Las máquinas son buenas?</strong> Tienen sus días, como todos, pero si se las trata bien no suelen poner pegas.</li>
-                <li>✅ <strong>¿Hacéis descuento en las máquinas?</strong> Sí, hacemos descuentos enormes pero solo si nos caes bien.</li>
+                <li>✅ <strong>¿Las máquinas son buenas?</strong> Tienen sus días, como todos, pero si se las trata bien suelen hacer su trabajo.</li>
+                <li>✅ <strong>¿Hacéis descuento en las máquinas?</strong> Sí, hacemos descuentos enormes, pero solo si nos caes bien.</li>
                 <li>✅ <strong>¿Podéis reparar mi vitrina de 1976?</strong> ¡Por supuesto! No es nuestro fuerte, pero reparamos todo tipo de piezas de museo cuando nos lo piden.</li>
-                <li>✅ <strong>¿Podéis venir rápido?</strong> ¡No! Tenemos que respetar las normas de tráfico porque no ganamos para multas. Llegar en 24 horas es lo mejor que podemos hacer.</li>
-                <li>✅ <strong>¿Será muy caro?</strong> Depende comparado con qué, pero a priori es más barato que el aceite de oliva. Cuando suponemos que el coste será mayor, nos toca trabajar y hacer un presupuesto.</li>
+                <li>✅ <strong>¿Podéis venir rápido?</strong> 🚗 No. Tenemos que respetar las normas de tráfico porque no ganamos para multas. Llegar en 24 horas es lo mejor que podemos hacer.</li>
+                <li>✅ <strong>¿Será muy caro?</strong> 💰 Depende de con qué lo compares. A priori es más barato que el aceite de oliva. Si el coste es mayor, hacemos un presupuesto.</li>
             </ul>
 
             <hr>
 
             <h3>📞 ¿Nos ponemos en contacto?</h3>
-            <p>Puedes llamarnos o enviar un <strong>WhatsApp</strong> al <a href="tel:+34620528074">+34 620 528 074</a></p>
-            <p>O envíanos un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a></p>
+            <p>📱 Puedes llamarnos o enviar un <strong>WhatsApp</strong> al <a href="tel:+34620528074">+34 620 528 074</a></p>
+            <p>📧 O envíanos un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a></p>
         </div>
     </div>
 
     <!-- Footer con imágenes de logos con opacidad reducida -->
     <footer style="text-align: center; padding: 20px; margin-top: 40px; background-color: #f8f8f8; font-size: 14px; color: #333;">
-        <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 10px;">
-            <img src="infrico.png" alt="Logo 1" style="height: 50px; opacity: 0.5;">
-            <img src="fricosmos.png" alt="Logo 2" style="height: 50px; opacity: 0.5;">
-            <img src="tecnoinox.png" alt="Logo 3" style="height: 50px; opacity: 0.5;">
-            <img src="impafri.png" alt="Logo 4" style="height: 37.5px; opacity: 0.5;"> <!-- Reducido 25% -->
-            <img src="intarcon.png" alt="Logo 5" style="height: 37.5px; opacity: 0.5;"> <!-- Reducido 25% -->
+        <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-bottom: 10px;">
+            <img src="infrico.png" alt="Logo Infrico" style="height: 50px; opacity: 0.5;">
+            <img src="fricosmos.png" alt="Logo Fricosmos" style="height: 50px; opacity: 0.5;">
+            <img src="tecnoinox.png" alt="Logo Tecnoinox" style="height: 50px; opacity: 0.5;">
+            <img src="impafri.png" alt="Logo Impafri" style="height: 37.5px; opacity: 0.5;"> <!-- Reducido 25% -->
+            <img src="intarcon.png" alt="Logo Intarcon" style="height: 37.5px; opacity: 0.5;"> <!-- Reducido 25% -->
         </div>
         <p>©2025 GastroSAT. Todos los derechos reservados.</p>
         <p>Desarrollado por <strong>GastroSAT</strong></p>
     </footer>
+
 </body>
 </html>
