--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <!-- Caja de contenido sin borde -->
         <div style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
             <h2>🚀 Bienvenido/a a GastroSAT</h2>
-            <p><strong>🛠️ Servicio de asistencia técnica & equipamiento para hoteles, bares y restaurantes de Mallorca.</strong></p>
+            <p><strong>Servicio de asistencia técnica & equipamiento para hoteles, bares y restaurantes de Mallorca.</strong></p>
 
-            <p>🔧 Cuando no podemos reparar una máquina, te vendemos una nueva. Por eso nuestras cifras de ventas son tan bajas.</p>
+            <p>Cuando no podemos reparar una máquina, te vendemos una nueva. Por eso nuestras cifras de ventas son tan bajas.</p>
 
             <hr>
 
@@ -44,8 +44,8 @@
             <hr>
 
             <h3>📞 ¿Nos ponemos en contacto?</h3>
-            <p>📱 Puedes llamarnos o enviar un <strong>WhatsApp</strong> al <a href="tel:+34620528074">+34 620 528 074</a></p>
-            <p>📧 O envíanos un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a></p>
+            <p>Puedes llamarnos o enviar un <strong>WhatsApp</strong> al <a href="tel:+34620528074">+34 620 528 074</a></p>
+            <p>O envíanos un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a></p>
         </div>
     </div>
 
