--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GastroSAT</title>
+    <title>GastroSAT | Asistencia Técnica y Equipamiento para Hostelería</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="GastroSAT ofrece asistencia técnica y venta de equipamiento para hostelería en Mallorca. Reparación, mantenimiento e instalación de maquinaria industrial.">
+    <meta name="keywords" content="asistencia técnica hostelería, reparación de maquinaria hostelería, venta de equipamiento hostelería, comprar maquinaria industrial, mantenimiento equipos industriales, servicio técnico maquinaria, reparación maquinaria Mallorca, equipamiento para hostelería, repuestos maquinaria hostelería, instalación de maquinaria, Fricosmos, Tecnoinox, Infrico, Impafri, Intarcon, hornos industriales, vitrinas refrigeradas, lavavajillas industriales, freidoras industriales, maquinaria de frío, servicio técnico en Mallorca, reparación maquinaria en Palma, asistencia técnica en Baleares, equipamiento para hoteles Mallorca, maquinaria para restaurantes Palma, venta de maquinaria hostelería, comprar equipamiento para restaurantes, distribuidor de maquinaria industrial, maquinaria para hoteles en Mallorca, maquinaria de cocina industrial, proveedores de equipamiento gastronómico, venta de hornos industriales, comprar lavavajillas industriales, maquinaria de frío industrial">
+    <meta name="author" content="GastroSAT">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph (para compartir en redes sociales) -->
+    <meta property="og:title" content="GastroSAT | Asistencia Técnica y Equipamiento para Hostelería">
+    <meta property="og:description" content="Especialistas en reparación y venta de maquinaria para hostelería en Mallorca.">
+    <meta property="og:image" content="https://gastrosat.com/logov3.jpg">
+    <meta property="og:url" content="https://gastrosat.com">
+    <meta property="og:type" content="website">
 </head>
 <body style="margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; text-align: center;">
 
@@ -14,7 +27,7 @@
         <!-- Caja de contenido sin borde -->
         <div style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
             <h2>🚀 Bienvenido/a a GastroSAT</h2>
-            <p><strong>Servicio de asistencia técnica & equipamiento para hoteles, bares y restaurantes de Mallorca.</strong></p>
+            <p><strong>Servicio de asistencia técnica & Equipamiento para hoteles, bares y restaurantes de Mallorca.</strong></p>
 
             <p>Cuando no podemos reparar una máquina, te vendemos una nueva. Por eso nuestras cifras de ventas son tan bajas.</p>
 
