--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <img src="intarcon.png" alt="Logo Intarcon" style="height: 30px; opacity: 0.5;"> <!-- Reducido 25% -->
         </div>
         <p>©2025 GastroSAT. Todos los derechos reservados.</p>
-        <p>Desarrollado por <strong>GastroSAT</strong></p>
+        <p>Desarrollado con 💚 por <strong>GastroSAT</strong></p>
     </footer>
 
 </body>
