--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <hr>
 
             <h3>📞 ¿Nos ponemos en contacto?</h3>
-            <p>Puedes llamarnos o enviar un <strong>WhatsApp</strong> al <a href="tel:+34620528074">+34 620 528 074</a></p>
+            <p>Puedes llamarnos (en horario comercial) o enviar un <strong>WhatsApp</strong> al <a href="tel:+34620528074">+34 620 528 074</a></p>
             <p>O envíanos un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a></p>
         </div>
     </div>
