--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <h3>❓ Preguntas frecuentes</h3>
             <ul style="list-style: none; padding: 0;">
-                <li>✅ <strong>¿Las máquinas son buenas?</strong> Tienen sus días, como todos, pero si se las trata bien no suelen poner pegas.</li>
+                <li>✅ <strong>¿Las máquinas son buenas?</strong> Tienen sus días, como todos, pero si se las trata bien suelen cumplir con su función</li>
                 <li>✅ <strong>¿Hacéis descuentos?</strong> Sí, hacemos descuentos enormes pero solo si nos caes bien.</li>
                 <li>✅ <strong>¿Podéis reparar mi vitrina de 1976?</strong> ¡Por supuesto! No es nuestro fuerte, pero reparamos todo tipo de piezas de museo cuando nos lo piden.</li>
                 <li>✅ <strong>¿Podéis venir rápido?</strong> ¡No! Tenemos que respetar las normas de tráfico porque no ganamos para multas. Llegar en menos de 24 horas es lo mejor que podemos hacer.</li>
