--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <li>✅ <strong>¿Hacéis descuentos?</strong> Sí, hacemos descuentos enormes pero solo si nos caes bien.</li>
                 <li>✅ <strong>¿Podéis reparar mi vitrina de 1976?</strong> ¡Por supuesto! No es nuestro fuerte, pero reparamos todo tipo de piezas de museo cuando nos lo piden.</li>
                 <li>✅ <strong>¿Podéis venir rápido?</strong> ¡No! Tenemos que respetar las normas de tráfico porque no ganamos para multas. Llegar en menos de 24 horas es lo mejor que podemos hacer.</li>
-                <li>✅ <strong>¿Será muy caro?</strong> Depende comparado con qué, pero a priori es más barato que el aceite de oliva. Cuando suponemos que el coste será mayor, nos toca trabajar y hacer un presupuesto.</li>
+                <li>✅ <strong>¿Será muy caro?</strong> Depende comparado con qué, pero a priori será más barato que el aceite de oliva. Cuando suponemos que el coste será mayor, nos toca trabajar y hacer un presupuesto.</li>
 <p></p>
             <hr>
 
