--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h2>🚀 Bienvenido/a a GastroSAT</h2>
             <p><strong>Servicio de Asistencia Técnica & Equipamiento para profesionales de la hostelería de Mallorca.</strong></p>
 
-            <p>Cuando no podemos reparar una máquina, te vendemos una nueva. Por eso nuestras cifras de ventas son tan bajas.</p>
+            <p>Cuando no podemos reparar una máquina, te vendemos una nueva. Por eso nuestras cifras de ventas son tan bajas.📉</p>
 
             <hr>
 
