--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h3>📞 ¿Nos ponemos en contacto?</h3>
             <p>Puedes llamarnos (en horario comercial) o enviar un <strong>WhatsApp</strong> (cuando sea) al <a href="tel:+34620528074">+34 620 528 074</a></p>
             <p>O si lo prefieres, envíanos un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a></p>
-            <p>En cualquier caso estaremos encantados de ayudarle.</p>
+            <p>En cualquier caso estaremos encantados de ayudarle.🤝</p>
         </div>
     </div>
 
