--- a/index.html
+++ b/index.html
@@ -36,13 +36,12 @@
 
             <h3>📂 Descarga nuestros catálogos</h3>
             <ul style="list-style: none; padding: 0;">
-                <li>📄 <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?rlkey=yo8yelhafefxjrv0tbzqsrw9b&st=w2t61pr4&dl=1" target="_blank">Catálogo FRICOSMOS.pdf</a></li>
+                <li>📄 <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?rlkey=yo8yelhafefxjrv0tbzqsrw9b&st=w2t61pr4&dl=1" target="_blank">Catálogo FRICOSMOS.pdf (Inox varios)</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/c8cs41gs00pn1z90e3tf5/Tecnoinox_Catalogo.pdf?rlkey=9xzodewwbvzrrrijmlw18vyta&st=3k2zqcps&dl=0" target="_blank">Catálogo TECNOINOX.pdf</a></li>
-                <li>📄 <a href="#">Catálogo pendiente</a></li>
-                <li>📄 <a href="#">Catálogo pendiente</a></li>
-                <li>📄 <a href="#">Catálogo pendiente</a></li>
-                <li>📄 <a href="#">Catálogo pendiente</a></li>
-                <li>📄 <a href="#">Catálogo pendiente</a></li>
+                <li>📄 <a href="https://www.dropbox.com/scl/fi/tie326s9yegvzfb84c52c/camaras-infrico.pdf?rlkey=ml89uyxfxkkoab9eu5z4boty2&st=y7ypo0gf&dl=0" target="_blank">Catálogo IMPAFRI.pdf (cámaras)</a></li>
+                <li>📄 <a href="https://www.dropbox.com/scl/fi/mcprpl7zdrv4l1zbg5pfp/catalogo-fribuffet.pdf?rlkey=0djsldozy48xe8dxrtkuzv3fa&st=qu6rmibv&dl=0" target="_blank">Catálogo FRIBUFFET.pdf</a></li>
+                <li>📄 <a href="https://www.dropbox.com/scl/fi/51hkfsvzcrjarr2lahv1g/cocinas-infrico.pdf?rlkey=tvg9nj444lacx6isadb5fjcw7&st=bo43aoy5&dl=0" target="_blank">Catálogo INFRICO.pdf (cocinas)</a></li>
+                <li>📄 <a href="https://www.dropbox.com/scl/fi/p194xho3erz2bhh1rocbu/catalogo-Infrico-supermarket.pdf?rlkey=ui57s8sz81zkks9bhpqtlepwr&st=yz7esm8j&dl=0" target="_blank">Catálogo INFRICO.pdf (supermarket)</a></li>
             </ul>
 
             <hr>
