--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/mcprpl7zdrv4l1zbg5pfp/catalogo-fribuffet.pdf?rlkey=0djsldozy48xe8dxrtkuzv3fa&st=qu6rmibv&dl=0" target="_blank">Catálogo FRIBUFFET.pdf</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/51hkfsvzcrjarr2lahv1g/cocinas-infrico.pdf?rlkey=tvg9nj444lacx6isadb5fjcw7&st=bo43aoy5&dl=0" target="_blank">Catálogo INFRICO.pdf (cocinas)</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/p194xho3erz2bhh1rocbu/catalogo-Infrico-supermarket.pdf?rlkey=ui57s8sz81zkks9bhpqtlepwr&st=yz7esm8j&dl=0" target="_blank">Catálogo INFRICO.pdf (supermarket)</a></li>
+                <li>📄 <a href="https://www.dropbox.com/scl/fi/2kblm53xos5jqung8ghf5/repuestos-by-you.pdf?rlkey=cju96n5komyjh98bomi79c121&st=vwqe0s6b&dl=0" target="_blank">Catálogo INFRICO BY YOU.pdf (repuestos)</a></li>
+
             </ul>
 
             <hr>
