--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
             <h3>❓ Preguntas frecuentes</h3>
             <ul style="list-style: none; padding: 0;">
+                <li>✅ <strong>¿Tenéis catálogos en papel?</strong> ¡Claro! También podemos enviarlos en pergamino, rollo de papiro o tallados en piedra si lo prefieres, solo tienes que solicitarlo y te lo enviamos.</li>
                 <li>✅ <strong>¿Las máquinas son buenas?</strong> Tienen sus días, como todos, pero si se las trata bien suelen cumplir con su función.</li>
                 <li>✅ <strong>¿Hacéis descuentos?</strong> Sí, hacemos descuentos enormes pero solo si nos caes bien.</li>
                 <li>✅ <strong>¿Podéis reparar mi vitrina de 1976?</strong> ¡Por supuesto! No es nuestro fuerte, pero reparamos todo tipo de piezas de museo cuando nos lo piden.</li>
