--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
             <p>Puedes llamarnos (en horario comercial) o enviar un <strong>WhatsApp</strong> (cuando sea) al <a href="tel:+34620528074">+34 620 528 074</a></p>
             <p>O si lo prefieres, envíanos un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a></p>
             <p>En cualquier caso estaremos encantados de ayudarte.🤝</p>
+                
+            <hr>
+                
+            <h3>👀 ¿Ya nos conocemos?</h3>   
+                <p><a href="https://www.google.com/search?sca_esv=96ee89d9f9e65c74&hl=es&si=APYL9bs7Hg2KMLB-4tSoTdxuOx8BdRvHbByC_AuVpNyh0x2KzQfCQRYzvPeaSANx3qwo_6s4eLDUSVJKobmykLzuNJeE5EA7aBmr5r_zw6HYXNfzd_vW2Vy_AS5xgwCW4DwskfkFf2HO&q=GastroSat+Rese%C3%B1as&sa=X&ved=2ahUKEwiO3aHizdCLAxUY-QIHHSO9H9sQ0bkNegQIHRAC&biw=1920&bih=911&dpr=1" target="_blank">Deja una reseña positiva (+)</a></p> 
+                <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Deja una reseña negativa (-)</a></p>
+
         </div>
     </div>
 
